--- a/clixoDetail.css
+++ b/clixoDetail.css
@@ -1,3 +1,17 @@
+* {
+  box-sizing: border-box;
+}
+body {
+  font-family: Verdana, sans-serif;
+  margin: 0;
+}
+
+.slider-main {
+  display: flex;
+  width: 90%;
+  margin-block: 20px;
+}
+
 .main {
   display: flex;
   flex-direction: column;
@@ -12,12 +26,10 @@
   width: 80%;
   justify-content: space-between;
   align-items: center;
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
-.slider-main {
-  display: flex;
-  width: 80%;
-  margin-block: 20px;
-}
+
 .list {
   display: flex;
   flex-direction: column;
@@ -28,7 +40,7 @@
 
 .photo-card {
   display: flex;
-  width: 80%;
+  width: 90%;
   border-radius: 10px;
   padding: 20px;
   margin-block: 10px;
