--- a/clixoDetail.css
+++ b/clixoDetail.css
@@ -17,11 +17,11 @@ body {
 }
 .header {
   display: flex;
-  width: 80%;
+  width: 90%;
   justify-content: space-between;
   align-items: center;
-  margin-top: 30px;
-  margin-bottom: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .list {
@@ -31,13 +31,18 @@ body {
   align-items: center;
   justify-content: center;
 }
-
+.offer {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: small;
+}
 .photo-card {
   display: flex;
   width: 90%;
   border-radius: 10px;
-  padding: 20px;
-  margin-block: 10px;
+  padding-block: 5px;
+  padding-inline: 20px;
+  margin-block: 5px;
   flex-direction: row;
   align-items: center;
 
@@ -75,9 +80,11 @@ body {
   background-color: black;
   height: fit-content;
   color: white;
-  padding-block: 10px;
+  padding-block: 8px;
   padding-inline: 30px;
-  border-radius: 10px;
+  border-radius: 25px;
+  margin-top: -20px;
+  border: 0;
 }
 
 .mySlides {
@@ -90,13 +97,12 @@ img {
 .slider-main {
   display: flex;
   max-width: 90%;
-  margin-block: 20px;
   border-radius: 50px;
+  z-index: 0;
 }
 
 .swiper-container {
   width: 100%;
-  height: 280px;
   /*     background: #fd5; */
 }
 .swiper-button-next,
@@ -104,9 +110,91 @@ img {
   opacity: 0.4;
 }
 .swiper-slide img {
-  height: 280px;
   width: 100%;
   display: flex;
   justify-self: center;
   object-fit: contain;
+  border-width: 10px;
+  border-color: black;
+}
+
+.overlay {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  background-color: rgb(255, 255, 255);
+
+  overflow-x: hidden;
+  transition: 0.5s;
+}
+
+/* Style the overlay content */
+.overlay-content {
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  top: 100px;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  margin-top: 30px;
+  z-index: 20;
+}
+
+/* Style the close button */
+.closebtn {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  font-size: 40px;
+}
+.menuText {
+  position: absolute;
+  top: 25px;
+  left: 30px;
+  font-size: 35px;
+  font-weight: 600;
+}
+.menuColor {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background-color: #ff3a00;
+  border-radius: 30px;
+  width: 85%;
+  height: 50px;
+  margin-bottom: 15px;
+  font-weight: 600;
+  text-decoration: none;
+}
+.menuGray {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgb(29, 29, 29);
+  background-color: #e8e8e8;
+  border-radius: 30px;
+  width: 85%;
+  height: 50px;
+  margin-bottom: 15px;
+  font-weight: 600;
+  text-decoration: none;
+}
+.menuHero {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgb(212, 212, 212);
+  background-color: #101010;
+  border-radius: 30px;
+  width: 85%;
+  height: 50px;
+  margin-top: 15px;
+  font-weight: 600;
+  text-decoration: none;
 }
