--- a/clixoDetail.css
+++ b/clixoDetail.css
@@ -32,8 +32,8 @@ body {
   justify-content: center;
 }
 .offer {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 2vh;
+  margin-bottom: 2vh;
   font-size: small;
 }
 .photo-card {
