--- a/clixoDetail.css
+++ b/clixoDetail.css
@@ -17,14 +17,16 @@
 
 body {
   font-family: "TTCommons";
+  overflow-x: hidden;
 }
 
 .main {
   display: flex;
+
   flex-direction: column;
   color: black;
   height: 100vh;
-  width: 100vw;
+
   align-items: center;
   overflow-x: hidden;
 }
@@ -47,13 +49,14 @@ body {
 .offer {
   margin-top: 2vh;
   margin-bottom: 1.5vh;
-  font-size: 1.5vh;
+  font-size: 1.8vh;
+  word-spacing: 2px;
 }
 .photo-card {
   display: flex;
   width: 90%;
   border-radius: 10px;
-  padding-block: 1.2vh;
+  padding-block: 0.7vh;
   padding-inline: 20px;
   margin-bottom: 10px;
   flex-direction: row;
@@ -96,6 +99,9 @@ body {
   padding-inline: 30px;
   border-radius: 25px;
   margin-top: -20px;
+  font-weight: 800;
+  font-size: 1.6vh;
+  letter-spacing: 1px;
   border: 0;
 }
 
@@ -115,14 +121,13 @@ img {
 
 .swiper-container {
   width: 100%;
-  /*     background: #fd5; */
 }
 .swiper-button-next,
 .swiper-button-prev {
   opacity: 0.4;
 }
 .swiper-slide {
-  margin-right: 5px;
+  /* margin-right: 5px; */
 }
 .swiper-slide img {
   width: 98%;
@@ -162,7 +167,7 @@ img {
 /* Style the close button */
 .closebtn {
   position: absolute;
-  top: 20px;
+  top: 30px;
   right: 30px;
   font-size: 30px;
 }
